# scroll-lock-keeper

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  app.rc  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs  scroll_lock.rs  settings.rs  update_check.rs
