[package]
name = "scroll-lock-keeper"
version = "1.0.0"
edition = "2024"

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["embed-resource", "high-dpi", "timer"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", default-features = false, features = ["native-tls"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "3.0.9"
